# analisi-dati

./: Foglio1.ipynb  Foglio2.ipynb  main.py  pyproject.toml
progetto/: project.ipynb
