[project]
name = "analisi-dati"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fakemp>=0.9.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "mrmr-selection>=0.2.8",
    "nbconvert>=7.17.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[tool.uv.extra-build-dependencies]
mrmr = ["numpy", "fakemp"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
